# BG-Suptec

./: .gitattributes  .gitignore  AGENTS.md  CHECKLIST.md  CLAUDE.md  DESIGN.md  PRODUCT.md  README.md  app.go  build.ps1  go.mod  go.sum  index.html  main.go  package-lock.json  package.json  refatoracao-rust-tauri.md  vite.config.ts  wails.json
.fleet/: run.json
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: events.rs  lib.rs  main.rs
src-tauri/src/adapters/: cscript.rs  memory.rs  mod.rs  network.rs  powershell.rs  process.rs  registry.rs  tcp_health.rs
src-tauri/src/audit/: file_logger.rs  mod.rs
src-tauri/src/auth/: mod.rs  rate_limiter.rs
src-tauri/src/commands/: activation.rs  anydesk.rs  auth.rs  cleanup.rs  disk.rs  formatting.rs  gpedit.rs  keyboard.rs  maintenance.rs  mod.rs  network.rs  office_c2r.rs  personalization.rs  policies.rs  power.rs  repair.rs  security.rs  system_info.rs
src-tauri/src/config/: mod.rs
src-tauri/src/domain/: anydesk.rs  disk.rs  formatting_workflow.rs  mod.rs  office_c2r.rs  repair.rs
src-tauri/src/domain/activation/: mod.rs  office.rs  windows.rs
src-tauri/src/domain/maintenance/: cleanup.rs  mod.rs
src-tauri/src/domain/network/: mod.rs
src-tauri/src/domain/personalization/: mod.rs
src-tauri/src/domain/security/: firewall.rs  mod.rs
src-tauri/src/domain/system/: gpedit.rs  keyboard.rs  mod.rs  policies.rs  power.rs  time.rs
src-tauri/src/ports/: audit.rs  cscript.rs  memory.rs  mod.rs  network.rs  process.rs  registry.rs  registry_writer.rs  tcp_health.rs
(+100 files in other folders)
