[package]
name = "bg-suptec"
version = "0.1.0"
description = "BG-SupTec — Ferramenta de suporte técnico Windows"
authors = ["BG-SupTec"]
edition = "2021"
default-run = "bg-suptec"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "bg_suptec_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[[bin]]
name = "generate_hash"
path = "src/bin/generate_hash.rs"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
argon2 = "0.5"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
winreg = "0.56.0"
tokio = { version = "1.52.3", features = ["process", "rt-multi-thread", "macros", "net", "time"] }
windows-sys = { version = "0.61.2", features = ["Win32_System_SystemInformation"] }
regex = "1"
walkdir = "2"

